# anni

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Readme.md  flake.nix  rust-toolchain.toml
anni/: Cargo.toml  build.rs
anni-backend/: Cargo.toml
anni-backend/src/: cache.rs  common.rs  lib.rs  utils.rs
anni-backend/src/backends/: drive.rs  file.rs  mod.rs  proxy.rs  strict_file.rs
anni-catalog-worker/: Cargo.toml
anni-catalog-worker/src/: adapter.rs  apple_music.rs  lib.rs  runner.rs
anni-catalog-worker/tests/: runner_repository.rs
anni-common/: CHANGELOG.md  Cargo.toml
anni-common/src/: artist.rs  decode.rs  diagnostic.rs  encode.rs  fs.rs  inherit.rs  lib.rs  lint.rs  models.rs  traits.rs  validator.rs
anni-common/tests/: decode.rs  identifier.rs  inherit.rs
anni-cover-worker/: Cargo.toml
anni-cover-worker/src/: lib.rs
anni-flac/: CHANGELOG.md  Cargo.toml
anni-flac/src/: common.rs  decoder.rs  error.rs  frames.rs  header.rs  lib.rs  parser.rs  prelude.rs  stream.rs  utils.rs
anni-flac/src/blocks/: application.rs  comment.rs  cue_sheet.rs  mod.rs  picture.rs  seek_table.rs  seektable.rs  stream_info.rs
anni-flac/tests/: application.rs  comments.rs  common.rs  decoder.rs  save.rs  stream_info.rs
anni-ingest/: Cargo.toml
anni-ingest-worker/: Cargo.toml
anni-ingest-worker/src/: asset.rs  executor.rs  lib.rs  receipt.rs  source.rs
anni-ingest-worker/tests/: staging_executor.rs
anni-ingest/src/: digest.rs  job.rs  lib.rs  manifest.rs  metadata.rs  path.rs  plan.rs
anni-metadata/: Cargo.toml  Readme.md  build.rs
anni-metadata/queries/: add-album.graphql  add-metadata-tag-relation.graphql  add-tag.graphql  album.graphql  albums.graphql  set-organize-level.graphql  tag.graphql  update-tag-relation.graphql
anni-metadata/schemas/: annim.graphql
anni-metadata/src/: annim.rs  client.rs  error.rs  lib.rs  mutation.rs  query.rs  utils.rs
anni-metadata/src/annim/: client.rs  mutation.rs  query.rs
anni-metadata/src/model/: album.rs  date.rs  tag.rs
anni-metadata/src/mutation/: add_album.rs  add_tag.rs  set_metadata_tags.rs  update_tag_relation.rs
anni-metadata/src/query/: album.rs  tag.rs
anni-playback/: CHANGELOG.md  Cargo.toml  Readme.md
anni-playback/examples/: gapless.rs  player.rs  tui.rs
anni-playback/src/: config.rs  controls.rs  cpal_output.rs  lib.rs  player.rs  stats.rs  types.rs
anni-playback/src/decoder/: decoder.rs  mod.rs  opus.rs
anni-playback/src/dsp/: normalizer.rs  resampler.rs
anni-playback/src/sources/: hls.rs  http.rs  mod.rs  streamable.rs
anni-playback/src/utils/: blocking_rb.rs  mod.rs
anni-provider/: CHANGELOG.md  Cargo.toml
anni-provider/src/: cache.rs  common.rs  lib.rs  utils.rs
anni-provider/src/fs/: local.rs  mod.rs
anni-provider/src/providers/: convention.rs  drive.rs  file.rs  mod.rs  multiple.rs  no_cache.rs  priority.rs  proxy.rs  strict.rs
anni-repo/: CHANGELOG.md  Cargo.toml  README.md
anni-repo/src/: album.rs  category.rs  date.rs  error.rs  lib.rs  library.rs  manager.rs  repo.rs  search.rs  structure.rs  tag.rs
anni-repo/src/db/: fs.rs  mod.rs  read.rs  rows.rs  write.rs
anni-repo/src/models/: album.rs  date.rs  json.rs  mod.rs  repo.rs  tag.rs
anni-repo/src/search/: mod.rs
anni-repo/src/utils/: git.rs  mod.rs
anni-repo/tests/: album.rs  category.rs  format.rs  library.rs  repo.rs  structure.rs
anni-repo/tests/fixtures/: test-album.toml
anni-split/: CHANGELOG.md  Cargo.toml
anni-split/src/: cue.rs  error.rs  lib.rs  split.rs  wave.rs
anni-split/src/codec/: ape.rs  command.rs  flac.rs  mod.rs  tak.rs  tta.rs  wav.rs
anni-split/src/decoder/: ape.rs  command.rs  flac.rs  mod.rs  tak.rs  tta.rs
anni-utils/: Cargo.toml
anni-utils/src/: artist.rs  decode.rs  encode.rs  fs.rs  lib.rs  report.rs  validator.rs
anni-utils/tests/: GNCA-0337.cue  decode.rs
anni-versary/: Cargo.toml
anni-versary/src/: auth.rs  lib.rs
anni-versary/src/subsonic/: api.rs  mod.rs
anni-workspace/: CHANGELOG.md  Cargo.toml
anni-workspace/src/: config.rs  error.rs  lib.rs  state.rs
anni-workspace/src/utils/: lock.rs
anni/i18n/en-US/: anni.ftl
anni/i18n/zh-CN/: anni.ftl
anni/src/: cli.rs  config.rs  convention.rs  cue.rs  encoding.rs  flac.rs  fs.rs  i18n.rs  main.rs  repo.rs  split.rs
anni/src/args/: action_file.rs  input_path.rs  mod.rs
anni/src/subcommands/: completions.rs  convention.rs  cue.rs  flac.rs  get.rs  library.rs  mod.rs  repo.rs  split.rs
anni/src/utils/: log.rs
anni/tests/: common.rs  cue.rs  flac.rs
annil/: CHANGELOG.md  Cargo.toml
annil/src/: auth.rs  backend.rs  config.rs  db.rs  error.rs  lib.rs  main.rs  metadata.rs  provider.rs  share.rs  state.rs  transcode.rs  utils.rs
annil/src/extractor/: admin.rs  auth.rs  mod.rs  token.rs  track.rs
annil/src/services/: admin_reload.rs  admin_sign.rs  albums.rs  audio.rs  cover.rs  info.rs  mod.rs  reload.rs
annim/: .env  Cargo.toml  Readme.md
annim/src/: auth.rs  config.rs  cover_worker.rs  lib.rs  main.rs  query_root.rs  search.rs  server.rs  web.rs
annim/src/catalog/: mod.rs  sync.rs
annim/src/cover/: mod.rs
annim/src/entities/: album.rs  album_tag_relation.rs  disc.rs  helper.rs  mod.rs  prelude.rs  tag_info.rs  tag_relation.rs  track.rs
annim/src/graphql/: catalog.rs  catalog_sync.rs  cover.rs  cursor.rs  ingest.rs  ingest_metadata.rs  input.rs  mod.rs  types.rs
annim/src/ingest/: mod.rs  service.rs
annim/src/migrator/: helper.rs  m20240817_000001_create_basic_tables.rs  m20240824_000002_create_tag_tables.rs  m20240905_000003_add_tag_type_category.rs  m20240905_000004_album_extra_jsonb.rs  m20260712_000005_create_ingest_job.rs  m20260712_000006_create_ingest_metadata_revision.rs  mod.rs  (+5 more)
annim/tests/: catalog_collection_migration.rs  catalog_graphql.rs  catalog_repository.rs  catalog_source_migration.rs  catalog_sync_graphql.rs  cover_asset_migration.rs  cover_graphql.rs  cover_repository.rs  ingest_graphql.rs  ingest_job_migration.rs  ingest_job_repository.rs  server_security.rs
anniv/: Cargo.toml
anniv/src/: backend.rs  config.rs  db.rs  main.rs  playlist.rs
(+138 files in other folders)
