[workspace]
members = [
    "anni",
    "annil",
    "annim",
    "anni-provider",
    "anni-common",
    "anni-flac",
    "anni-split",
    "anni-repo",
    "anni-workspace",
    "anni-playback",
    "anni-metadata",
    "anni-ingest",
    "third_party/google-drive3",
]
resolver = "3"

[workspace.package]
edition = "2024"
authors = ["Yesterday17 <mmf@mmf.moe>"]
repository = "https://github.com/ProjectAnni/anni"
license = "Apache-2.0"

[workspace.dependencies]
anni-common = { version = "0.2.0", path = "./anni-common" }
anni-ingest = { path = "./anni-ingest" }
anni-metadata = { path = "./anni-metadata" }

log = "0.4"
uuid = { version = "1", features = ["v4"] }
reqwest = { version = "0.13", features = [
    "rustls",
], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "1.1.2"
anyhow = "1.0"
thiserror = "2.0"
once_cell = "1"

axum = "0.8.9"
