[package]
name = "anni-backend"
version = "0.1.1"
authors = ["Yesterday17 <mmf@mmf.moe>"]
edition = "2018"

[dependencies]
tokio = { version = "1", features = ["full", "time"] }
tokio-util = { version = "0.6.3", features = ["compat"] }
futures = "0.3"
async-trait = "0.1.45"

thiserror = "1.0"
anni-repo = { path = "../anni-repo", features = ["db"] }
log = "0.4.0"

google-drive3 = "*"
yup-oauth2 = "^5.0"
hyper = { version = "^0.14", features = ["stream"] }
hyper-rustls = "^0.22"

sha2 = "0.9.4"
hex = "0.4.2"
parking_lot = "0.11.1"
anni-flac = { path = "../anni-flac", features = ["async"] }

[dependencies.reqwest]
version = "0.11"
default-features = false
features = ["json", "rustls-tls", "stream"]
