[package]
name = "anni-common"
version = "0.1.1"
authors = ["Yesterday17 <mmf@mmf.moe>"]
edition = "2021"

description = "Common library used by Project Anni."
repository = "https://github.com/ProjectAnni/anni"
license = "Apache-2.0"

[features]
default = ["trash"]

[dependencies]
byteorder = "1"
thiserror = "1.0"
path-absolutize = "3.0.13"
pathdiff = "0.2.1"
log = "0.4"
anni-artist = "0.1.0"

# Remove the dependency for encoding_rs after https://github.com/hsivonen/chardetng/pull/10 was merged
encoding_rs = { version = "0.8.31", features = ["alloc"] }
chardetng = "0.1.17"

regex = "1"
once_cell = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

trash = { version = "2.0", optional = true }