[package]
name = "anni-common"
version = "0.1.3"
description = "Common library used by Project Anni."

edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[features]
default = ["trash"]

[dependencies]
byteorder = "1"
thiserror.workspace = true
path-absolutize = "3.0.13"
pathdiff = "0.2.1"
log.workspace = true
anni-artist = "0.1.1"

# Remove the dependency for encoding_rs after https://github.com/hsivonen/chardetng/pull/10 was merged
encoding_rs = { version = "0.8.31", features = ["alloc"] }
chardetng = "0.1.17"

regex = "1"
once_cell = "1"
serde.workspace = true
serde_json.workspace = true

trash = { version = "3.0.1", optional = true }
