[package]
name = "anni-common"
version = "0.2.0"
description = "Common library used by Project Anni."

edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
byteorder = "1"
thiserror.workspace = true
path-absolutize = "3.1.1"
pathdiff = "0.2.3"
log.workspace = true
anni-artist = "0.1.1"

# Remove the dependency for encoding_rs after https://github.com/hsivonen/chardetng/pull/10 was merged
encoding_rs = { version = "0.8.35", features = ["alloc"] }
chardetng = "1.0.0"

regex = "1"
once_cell.workspace = true
serde.workspace = true
serde_json.workspace = true

trash = { version = "5.2.6", optional = true }

[dev-dependencies]
tempfile = "3"
