[package]
name = "anni-flac"
version = "0.2.2"
authors = ["Yesterday17 <mmf@mmf.moe>"]
edition = "2021"

description = "FLAC parser implemented for Project Anni."
repository = "https://github.com/ProjectAnni/anni"
license = "Apache-2.0"

[dependencies]
hex = "0.4"
thiserror = "1"
byteorder = "1"
num-traits = "0.2"
num-derive = "0.3"
image = "0.24"
tokio = { version = "1", optional = true }
async-trait = { version = "0.1", optional = true }
log = "0.4"

[dev-dependencies]
tempfile = "3.2.0"

[features]
async = ["tokio", "async-trait"]