[package]
name = "anni-flac"
version = "0.2.2"
description = "FLAC parser implemented for Project Anni."

edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
hex = "0.4"
thiserror.workspace = true
byteorder = "1"
image = "0.24"
tokio = { version = "1", features = ["io-util"], optional = true }
async-trait = { version = "0.1", optional = true }
log.workspace = true

[dev-dependencies]
tempfile = "3.2.0"

[features]
async = ["tokio", "async-trait"]
