[package]
name = "anni-metadata"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
chrono = { version = "0.4.38", features = ["serde"] }
cynic = { version = "3", features = ["http-reqwest"] }
reqwest.workspace = true
serde_json.workspace = true
uuid = { workspace = true, features = ["serde"] }

[build-dependencies]
cynic-codegen = { version = "3" }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
