[package]
name = "anni-metadata"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
chrono = { version = "0.4.38", features = ["serde"] }

serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true

toml.workspace = true
toml_edit = "0.22.20"
indexmap = "2.5.0"
uuid = { workspace = true, features = ["serde"] }

cynic = { version = "3", features = ["http-reqwest"], optional = true }
reqwest = { workspace = true, optional = true }

[build-dependencies]
cynic-codegen = { version = "3" }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }

[features]
default = []
annim = ["reqwest", "cynic"]
