[package]
name = "anni-playback"
version = "0.1.0"

edition.workspace = true
authors.workspace = true
repository.workspace = true
license = "LGPL-3.0"

[dependencies]
cpal = "0.15.2"
reqwest = { workspace = true, features = [
    "blocking",
    "rustls-tls",
], default-features = false }
symphonia = { version = "0.5.4", default-features = false, features = [
    # codecs
    "aac",
    "flac",
    # formats
    "ogg",
] }
symphonia-core = "0.5.4"
crossbeam = { version = "0.8.2", features = ["crossbeam-channel"] }
rubato = "0.14.1"
rangemap = "1.3.0"
arrayvec = "0.7.2"
ebur128 = "0.1.7"
anyhow.workspace = true
once_cell.workspace = true
audiopus = { git = "https://github.com/ProjectAnni/audiopus" }
log.workspace = true
anni-provider = { version = "0.3.1", path = "../anni-provider", default-features = false, features = ["priority"] }
anni-common = { version = "0.2", path = "../anni-common" }

[dev-dependencies]
# used by tui example
ratatui = { version = "0.25.0", features = ["crossterm"] }
crossterm = "0.27.0"
