[package]
name = "anni-playback"
version = "0.1.0"

edition.workspace = true
authors.workspace = true
repository.workspace = true
license = "LGPL-3.0"

[dependencies]
cpal = "0.18.1"
reqwest = { workspace = true, features = [
    "blocking",
    "rustls",
], default-features = false }
symphonia = { version = "0.6.0", default-features = false, features = [
    # codecs
    "aac",
    "flac",
    # formats
    "ogg",
] }
symphonia-core = "0.6.0"
crossbeam = { version = "0.8.4", features = ["crossbeam-channel"] }
rubato = "4.0.0"
rangemap = "1.7.1"
ebur128 = "0.1.10"
anyhow.workspace = true
once_cell.workspace = true
audiopus = { git = "https://github.com/ProjectAnni/audiopus", rev = "f28d23f92e22d3f0ff7fdb706c50dae8ee660793" }
log.workspace = true
anni-provider = { version = "0.3.1", path = "../anni-provider", default-features = false, features = [
    "priority",
] }
anni-common = { version = "0.2", path = "../anni-common" }
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
# used by tui example
ratatui = { version = "0.30.2", features = ["crossterm"] }
crossterm = "0.29.0"
