[package]
name = "anni-repo"
version = "0.4.2"
description = "Operate on anni metadata repository."

edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
toml_edit = "0.25.12"
# TODO: remove usage of toml, use toml_edit directly
toml.workspace = true
serde.workspace = true
serde_json = { workspace = true, optional = true }
regex = "1"
thiserror.workspace = true
anni-common.workspace = true
uuid = { workspace = true, features = ["serde"] }
log.workspace = true
once_cell.workspace = true
pathdiff = "0.2.3"
indexmap = "2.14.0"
anni-artist = "0.1.1"

# flac
anni-flac = { version = "0.2.2", path = "../anni-flac", optional = true }
alphanumeric-sort = { version = "1.5.8", optional = true }

# Git related
git2 = { version = "0.18.3", optional = true, default-features = false, features = [
    "vendored-libgit2",
] }
git2-ureq = { version = "0.3.0", optional = true, features = ["socks-proxy"] }

# SQLite related
# Keep this aligned with SQLx 0.8's libsqlite3-sys requirement so the workspace
# can support both anni-repo's synchronous DB and annim's optional SQLite backend.
rusqlite = { version = "0.32.1", optional = true, features = [
    "uuid",
    "bundled",
    "serde_json",
] }
serde_rusqlite = { version = "0.36.0", optional = true }

# Search
tantivy = { version = "0.25.0", optional = true }
lindera = { version = "4.0.0", optional = true }
lindera-tantivy = { version = "4.0.0", optional = true, features = [
    "embed-ipadic",
] }
anni-metadata.workspace = true


# WASM dependencies
# comment those dependencies when publishing to crates.io
#[target.wasm32-unknown-unknown.dependencies]
#getrandom = { version = "0.2", features = ["js"] }
#js-sys = "0.3.56"
#wasm-bindgen = { version = "0.2.79", features = ["serde-serialize"] }
#serde-wasm-bindgen = "0.4.2"
#sqlite-vfs = { git = "https://github.com/ProjectAnni/sqlite-vfs" }

[features]
default = ["json"]
apply = ["flac", "alphanumeric-sort"]
db = ["db-read", "db-write"]
db-read = ["rusqlite", "serde_rusqlite"]
db-write = ["rusqlite"]
git = ["git2", "git2-ureq"]
flac = ["anni-flac"]
json = ["serde_json"]
search = ["tantivy", "lindera", "lindera-tantivy"]
