[package]
name = "anni-split"
version = "0.1.0"
description = "Audio splitting library."

edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
anni-common.workspace = true

thiserror.workspace = true
log.workspace = true
which = "5.0.0"
cuna = "0.7.0"
