[package]
name = "anni-utils"
version = "0.1.0"
authors = ["Yesterday17 <mmf@mmf.moe>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prettytable-rs = "0.8.0"
term = "0.5.2"
byteorder = "1"
thiserror = "1.0"
chardetng = "0.1.12"
log = "0.4.0"
