[package]
name = "anni-versary"
version = "0.1.0"
authors = ["Yesterday17 <t@yesterday17.cn>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3.2"
actix-web-actors = "3.0.0"
jsonwebtoken = "7"
serde = {version = "1.0", features = ["derive"] }
r2d2 = "0.8.9"
r2d2_sqlite = "0.17.0"
rusqlite = "0.24.2"
