[package]
name = "anni-versary"
version = "0.1.0"
authors = ["Yesterday17 <t@yesterday17.cn>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jsonwebtoken = "7"
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "0.8", features = ["serde", "v4", "v5"] }
rocket = { git = "https://github.com/SergioBenitez/Rocket", branch = "master" }
quick-xml = { version = "0.20.0", features = ["serialize"] }