[package]
name = "anni-workspace"
version = "0.2.0"
description = "A library to operate on anni workspace."

edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
anni-repo = { path = "../anni-repo", features = [
    "git",
    "flac",
    "apply",
] }
anni-common = { path = "../anni-common" }
anni-flac = { path = "../anni-flac" }

uuid.workspace = true
serde.workspace = true
thiserror = "1"
toml = "0.7.3"

log.workspace = true
alphanumeric-sort = "1.4.4"
