[package]
name = "anni-workspace"
version = "0.2.2"
description = "A library to operate on anni workspace."

edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
anni-repo = { version = "0.4.1", path = "../anni-repo", features = [
    "git",
    "flac",
    "apply",
] }
anni-common.workspace = true
anni-flac = { version = "0.2.2", path = "../anni-flac" }

uuid.workspace = true
serde.workspace = true
thiserror.workspace = true
toml.workspace = true

log.workspace = true
alphanumeric-sort = "1.4.4"
