[package]
name = "anni"
version = "0.1.1"
authors = ["Yesterday17 <mmf@mmf.moe>"]
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
clap = { version = "4.0.4", features = ["derive", "cargo", "env"] }
clap_complete = "4.0.2"
regex = "1"
which = "4.2.4"
edit = "0.1.2"
once_cell = "1"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.7.0"
directories-next = "2.0.0"

anni-common = { path = "../anni-common" }
anni-flac = { path = "../anni-flac" }
anni-repo = { path = "../anni-repo", features = [
    "db",
    "git",
    "flac",
    "apply",
    #    "search",
] }
anni-provider = { path = "../anni-provider", version = "0.1.2" }
annil = { path = "../annil", default-features = false }
anni-workspace = { path = "../anni-workspace" }
clap-handler = { version = "0.1.1", features = ["async"] }

i18n-embed = { version = "0.13.4", features = [
    "fluent-system",
    "desktop-requester",
    "filesystem-assets",
] }
i18n-embed-fl = "0.6.4"
rust-embed = "6.3.0"

log = "0.4"
env_logger = "0.10.0"
anyhow = { version = "1.0", features = ["backtrace"] }

cuna = "0.6.3"
id3 = "1"
anni-vgmdb = "0.3.1"
# https://github.com/oknozor/musicbrainz_rs/pull/75 has been merged
# Remove this patch after release
musicbrainz_rs = { git = "https://github.com/ProjectAnni/musicbrainz_rs", default-features = false, features = [
    "rustls",
    "blocking",
] }

uuid = { version = "1", features = ["v4"] }
alphanumeric-sort = "1.4.4"
ptree = { version = "0.4.0", default-features = false, features = [
    "petgraph",
    "ansi",
    "value",
] }
colored = "2.0.0"
chrono = "0.4"

inquire = "0.5.2"
notify = { version = "5.0.0", default-features = false, features = [
    "macos_kqueue",
] }
notify-debouncer-mini = { version = "0.2.1", default-features = false }
anni-google-drive3 = { path = "../third_party/google-drive3" }

axum = "0.6.1"

[dependencies.reqwest]
version = "0.11.11"
default-features = false
features = ["json", "rustls-tls"]

[dev-dependencies]
tempfile = "3.2.0"
