[package]
name = "anni"
version = "0.1.1"
publish = false

edition.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
tokio = { version = "1", features = ["full"] }
clap = { version = "4.0.4", features = ["derive", "cargo", "env"] }
clap_complete = "4.0.2"
regex = "1"
edit = "0.1.2"
once_cell.workspace = true

serde.workspace = true
serde_json.workspace = true
toml.workspace = true
directories-next = "2.0.0"

anni-common = { path = "../anni-common", features = ["trash"] }
anni-flac = { path = "../anni-flac" }
anni-split = { path = "../anni-split" }
anni-repo = { path = "../anni-repo", features = [
    "db",
    "git",
    "flac",
    "apply",
    #    "search",
] }
anni-provider = { path = "../anni-provider" }
annil = { path = "../annil", default-features = false }
anni-workspace = { path = "../anni-workspace" }
clap-handler = { version = "0.1.1", features = ["async"] }

i18n-embed = { version = "0.14.1", features = [
    "fluent-system",
    "desktop-requester",
    "filesystem-assets",
] }
i18n-embed-fl = "0.7.0"
rust-embed = "8.2.0"

log.workspace = true
env_logger = "0.10.0"
anyhow.workspace = true

cuna = "0.7.0"
id3 = "1"
anni-vgmdb = "0.3.1"
musicbrainz_rs = { git = "https://github.com/ProjectAnni/musicbrainz_rs.git", default-features = false, features = [
    "rustls",
    "async",
] }

uuid.workspace = true
alphanumeric-sort = "1.4.4"
ptree = { version = "0.4.0", default-features = false, features = [
    "petgraph",
    "ansi",
    "value",
] }
colored = "2.0.0"
chrono = "0.4"

inquire = "0.6.0"
notify = { version = "6.1.1", default-features = false, features = [
    "macos_kqueue",
] }
notify-debouncer-mini = { version = "0.4.1", default-features = false }
anni-google-drive3 = { path = "../third_party/google-drive3" }

axum.workspace = true
reqwest = { workspace = true, features = ["json"] }

[dev-dependencies]
tempfile = "3.2.0"
