[package]
name = "annil"
version = "0.1.0"
authors = ["Yesterday17 <mmf@mmf.moe>"]
edition = "2021"

description = "A basic implementation of annil protocol."
repository = "https://github.com/ProjectAnni/anni"
license = "Apache-2.0"

[dependencies]
axum = "0.6.1"
tower-http = { version = "0.3.5", features = ["cors"] }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7.4", features = ["io"] }
futures = "0.3"

anyhow = { version = "1.0", features = ["backtrace"] }
thiserror = "1.0"
async-trait = "0.1"

anni-flac = { path = "../anni-flac", version = "0.2.2", features = ["async"] }
anni-repo = { path = "../anni-repo", version = "0.2.0", features = [
    "git",
    "db-write",
], optional = true }
anni-provider = { path = "../anni-provider", version = "0.1.2" }

serde = { version = "1.0", features = ["derive"] }
toml = "0.7.0"
log = "0.4"
env_logger = "0.10.0"
jwt-simple = "0.11.0"
uuid = "1"
base64 = "0.21.0"

[features]
default = ["metadata", "transcode"]
metadata = ["anni-repo"]
transcode = []
