[package]
name = "annil"
version = "0.2.0"
description = "A basic implementation of annil protocol."

edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
axum = { version = "0.6.1", features = ["macros"] }
tower-http = { version = "0.4.0", features = ["cors"] }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7.4", features = ["io"] }
futures = "0.3"

anyhow.workspace = true
thiserror.workspace = true
async-trait = "0.1"

anni-flac = { version = "0.2.2", path = "../anni-flac", features = ["async"] }
anni-repo = { version = "0.4.1", path = "../anni-repo", features = [
    "git",
    "db-write",
], optional = true }
anni-provider = { version = "0.3.0", path = "../anni-provider" }

serde.workspace = true
toml.workspace = true
log.workspace = true
env_logger = "0.10.0"
jwt-simple = "0.11.0"
uuid.workspace = true
base64 = "0.21.0"

[features]
default = ["metadata", "transcode"]
metadata = ["anni-repo"]
transcode = []
